--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --background-color-dark: #2F303A;
     --background-color-grey: #F5F4FA;
     --background-color-logo: #AFB1B8;
+    --cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -90,10 +91,12 @@ ul, ol {
     line-height: 1.14x;
     letter-spacing: 0.02em;
     color: var(--second-color-text);
+    transform: color;
 }
 
 .header-link:hover, .header-mail:hover, .header-tel:hover {
     color: var(--acent-color);
+    transition: color 250ms var(--cubic);
 }
 
 .header-mail:hover .contact-icon, .header-tel:hover .contact-icon {
@@ -458,7 +461,35 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
     border: 1px;
     border: 1px solid #EEEEEE;
 }
+.project-img-box {
+    position: relative;
+    overflow: hidden;
+}
+.project-scripture {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    height: 100%;
+    background-color:  rgba(33, 150, 243, 0.9);
+    padding-top: 63px;
+    padding-left: 24px;
+    color: var(--acent-color-background-text);
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    opacity: 0;
+    transform: translateY(100%);
+    
 
+}
+
+.project-item-link:hover .project-scripture, .project-item-link:focus .project-scripture {
+    opacity: 1;
+    top: 0;
+    transform: translateY(0);
+    transition: transform 250ms var(--cubic);
+    
+}
 
 .project-kind {
     font-size: 16px;
@@ -617,3 +648,14 @@ background-color: var(--acent-color);
 .footer-soc-logo {
     fill: var(--acent-color-background-text);
 }
+
+/* .backdrop {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    /* opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease-in-out; */
+} */
